--- a/index.html
+++ b/index.html
@@ -129,31 +129,32 @@
             <h1 class="text-center pb-4">Skills</h1>
             <div class="row">
                 <div class="col-md-12 pt-4">
-                    <h4>Python</h4>
+                    <h4>React JS</h4>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                     </div>
                 </div>
                 <div class="col-md-12 pt-4">
-                    <h4>JAVA</h4>
+                    <h4>Node JS</h4>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                     </div>
                 </div>
                 <div class="col-md-12 pt-4">
-                    <h4>C++</h4>
+                    <h4>Express JS</h4>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
                     </div>
                 </div>
                 <div class="col-md-12 pt-4">
-                    <h4>JavaScript</h4>
+                    <h4>MongoDB</h4>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                     </div>
                 </div>
+                
                 <div class="col-md-12 pt-4 pb-4">
-                    <h4>Computer Vision</h4>
+                    <h4>Git</h4>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                     </div>
