--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h3 class="font-weight-bold pt-5">Software Developer <br>
                         Kannur, Kerala, India
                     </h3>
-                    <p>"You are the average of 5 people you hang around"</p>
+                    <p>"'am a MERN stack developer from Kannur , Kerala, India. i am a Self taught developer I use several online facility to develop my coding skills. I enjoy taking complex problem and turning them into simple and beutiful interface designs. I also have the logic and structure of coding and always strive to write elegent and efficient code"</p>
                     <footer>- Abhishek</footer>
                 </div>
             </div>
