add project list

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                           <a class="nav-link text-white " href="#home-section">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link text-white " href="#services-section">Services</a>
+                          <a class="nav-link text-white " href="#project-section">Projects</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link text-white " href="#skills-section">Skills</a>
@@ -48,44 +48,44 @@
                     <img src="https://avatars.githubusercontent.com/u/75170385?v=4" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="col-md-6">
-                    <h3 class="font-weight-bold pt-5">Software Developer <br>
+                    <h3 class="font-weight-bold pt-5">Full Stack Developer <br>
                         Kannur, Kerala, India
                     </h3>
-                    <p>"'am a MERN stack developer from Kannur , Kerala, India. i am a Self taught developer I use several online facility to develop my coding skills. I enjoy taking complex problem and turning them into simple and beutiful interface designs. I also have the logic and structure of coding and always strive to write elegent and efficient code"</p>
+                    <p class="mt-3">"'am a MERN stack developer from Kannur , Kerala, India. i am a Self taught developer I use several online facility to develop my coding skills. I enjoy taking complex problem and turning them into simple and beutiful interface designs. I also have the logic and structure of coding and always strive to write elegent and efficient code"</p>
                     <footer>- Abhishek</footer>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="bg-light pt-5" id="services-section">
+    <section class="bg-light pt-5" id="project-section">
         <div class="container">
-            <h1 class="text-center pb-4 pt-4">Services</h1>
+            <h1 class="text-center pb-4 pt-4">Projects</h1>
             <div class="row">
                 <div class="col-md-4 pt-4">
                     <div class="card" style="width: 18rem; -webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
-                        <img class="card-img-top" src="https://www.pngitem.com/pimgs/m/145-1451255_web-designing-web-design-website-icon-hd-png.png" alt="Card image cap">
+                        <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work7.81a29fac.png" alt="Card image cap">
                         <div class="card-body">
-                        <h5 class="card-title">IT Consulting</h5>
-                        <p class="card-text">In management, IT consulting as a field of activity focuses on advising organizations on how best to use IT</p>
+                        <h5 class="card-title">Petskaro</h5>
+                        <p class="card-text">Petskaro using React.js, Tailwind CSS, Material UI, Git, Firebase Authentication, Firestore Database, Firebase Storage</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 pt-4">
                     <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
-                        <img class="card-img-top" src="https://www.pngitem.com/pimgs/m/145-1451255_web-designing-web-design-website-icon-hd-png.png" alt="Card image cap">
+                        <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work3.69dde3d1.png" alt="Card image cap">
                         <div class="card-body">
-                        <h5 class="card-title">Computer Vision</h5>
-                        <p class="card-text">Computer vision is a field of artificial intelligence that trains computers to interpret and understand the visual world.</p>
+                        <h5 class="card-title">Online Classified Marketplace</h5>
+                        <p class="card-text">Online Classified Marketplace using React js, React Router Dom, Material UI, Firebase Authentication, Firestore Database, Firebase Storage, Git</p>
                         </div>
                     </div>
                 </div>    
                 <div class="col-md-4 pt-4 ">
                     <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
-                        <img class="card-img-top" src="https://www.pngitem.com/pimgs/m/145-1451255_web-designing-web-design-website-icon-hd-png.png" alt="Card image cap">
+                        <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work6.e4782898.png" alt="Card image cap">
                         <div class="card-body">
-                        <h5 class="card-title">Web Development</h5>
-                        <p class="card-text">Web development is the work involved in developing a Web site for the Internet, building and maintenance of websites</p>
+                        <h5 class="card-title">Disney clone</h5>
+                        <p class="card-text">Disney clone using React js, styled components, Redux, React Router Dom, Firebase Authentication, Firestore Database, Firebase Storage, Git</p>
                         </div>
                     </div>
                 </div>        
@@ -94,28 +94,28 @@
             <div class="row">
                 <div class="col-md-4 pt-4">
                     <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
-                        <img class="card-img-top" src="https://www.pngitem.com/pimgs/m/145-1451255_web-designing-web-design-website-icon-hd-png.png" alt="Card image cap">
+                        <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work1.736bc26a.png" alt="Card image cap">
                         <div class="card-body">
-                        <h5 class="card-title">Web Design</h5>
-                        <p class="card-text">Web design encompasses many different skills and disciplines in the production and maintenance of websites.</p>
+                        <h5 class="card-title">Netflix Clone</h5>
+                        <p class="card-text">Netflix clone using React js, React Router Dom, React-Youtube, Axios, TMDB Api, Firebase Authentication, Git</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 pt-4">
                     <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
-                        <img class="card-img-top" src="https://www.pngitem.com/pimgs/m/145-1451255_web-designing-web-design-website-icon-hd-png.png" alt="Card image cap">
+                        <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work2.6b7a515a.png" alt="Card image cap">
                         <div class="card-body">
-                        <h5 class="card-title">Seminar Reports & Presentation</h5>
-                        <p class="card-text">The aim of the summary is to familiarize the reader with the main points of the seminar report.</p>
+                        <h5 class="card-title">Google Drive Clone</h5>
+                        <p class="card-text">Google Drive Clone using React js, React Router Dom, Firebase Authentication, Firestore Database, Firebase Storage, Git</p>
                         </div>
                     </div>
                 </div>    
                 <div class="col-md-4 pt-4">
                     <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
-                        <img class="card-img-top" src="https://www.pngitem.com/pimgs/m/145-1451255_web-designing-web-design-website-icon-hd-png.png" alt="Card image cap">
+                        <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work5.549cdf94.png" alt="Card image cap">
                         <div class="card-body">
-                        <h5 class="card-title">Robotics</h5>
-                        <p class="card-text">Robotics is an interdisciplinary field that integrates computer science and engineering, That can help and assist humans</p>
+                        <h5 class="card-title">YouTube Clone</h5>
+                        <p class="card-text">YouTube Clone using React js, React Router Dom and Git</p>
                         </div>
                     </div>
                 </div>        
