--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container">
             <h1 class="text-center pb-4 pt-4">Projects</h1>
             <div class="row">
-                <div class="col-md-4 pt-4">
+                <a  href="https://petskaro.web.app/" style="text-decoration: none; color: black;"><div class="col-md-4 pt-4">
                     <div class="card" style="width: 18rem; -webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
                         <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work7.81a29fac.png" alt="Card image cap">
                         <div class="card-body">
@@ -70,45 +70,45 @@
                         <p class="card-text">Petskaro using React.js, Tailwind CSS, Material UI, Git, Firebase Authentication, Firestore Database, Firebase Storage</p>
                         </div>
                     </div>
-                </div>
+                </div></a>
                 <div class="col-md-4 pt-4">
-                    <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
+                    <a  href="https://olx-clone-0015.web.app/" style="text-decoration: none; color: black;"><div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
                         <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work3.69dde3d1.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Online Classified Marketplace</h5>
                         <p class="card-text">Online Classified Marketplace using React js, React Router Dom, Material UI, Firebase Authentication, Firestore Database, Firebase Storage, Git</p>
                         </div>
-                    </div>
+                    </div></a>
                 </div>    
                 <div class="col-md-4 pt-4 ">
-                    <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
+                    <a  href="https://disney-clone-0015.web.app/" style="text-decoration: none; color: black;"><div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
                         <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work6.e4782898.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Disney clone</h5>
                         <p class="card-text">Disney clone using React js, styled components, Redux, React Router Dom, Firebase Authentication, Firestore Database, Firebase Storage, Git</p>
                         </div>
-                    </div>
+                    </div></a>
                 </div>        
             </div> 
 
             <div class="row">
                 <div class="col-md-4 pt-4">
-                    <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
+                    <a  href="https://netflix-clone-0015.web.app/" style="text-decoration: none; color: black;"><div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
                         <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work1.736bc26a.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Netflix Clone</h5>
                         <p class="card-text">Netflix clone using React js, React Router Dom, React-Youtube, Axios, TMDB Api, Firebase Authentication, Git</p>
                         </div>
                     </div>
-                </div>
+                </div></a>
                 <div class="col-md-4 pt-4">
-                    <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
+                    <a  href="https://clone-c6896.web.app/" style="text-decoration: none; color: black;"><div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
                         <img class="card-img-top" src="https://abhishek-0015.web.app/static/media/work2.6b7a515a.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Google Drive Clone</h5>
                         <p class="card-text">Google Drive Clone using React js, React Router Dom, Firebase Authentication, Firestore Database, Firebase Storage, Git</p>
                         </div>
-                    </div>
+                    </div></a>
                 </div>    
                 <div class="col-md-4 pt-4">
                     <div class="card" style="width: 18rem;-webkit-box-shadow: 0 0 10px #fff;box-shadow: 0 0 10px #379fd3;border-radius: 8px;">
